Updated docs and put them into TUD CI

--- a/manual/tud-latex/fvf-manual.tex
+++ b/manual/tud-latex/fvf-manual.tex
@@ -1,11 +1,14 @@
-\documentclass[11pt,accentcolor=tud2a,colorback,noheadingspace]{tudreport}
+\documentclass[11pt,accentcolor=tud2a,colorback,noheadingspace,bigchapter]{tudreport}
 
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage[figure]{hypcap}
 \usepackage{float}
-\setlength\parindent{0pt}
 
+\usepackage{enumitem}
+\setlist[itemize]{parsep=0pt}
+\setlist[description]{parsep=0.5\baselineskip}
+\setlength\parindent{0pt}
 
 \date{July 28, 2015}
 \author{Leonie Poetsch, Thomas Gossmann}
