Updated a set of pdfs

--- a/docs/tud-latex/appendix.tex
+++ b/docs/tud-latex/appendix.tex
@@ -281,9 +281,9 @@ Error code explanation:
 -\textgreater{} See here: \href{https://marcosc.com/2011/10/arduino-java-error-serial-port-already-in-use/}{https://marcosc.com/2011/10/arduino-java-error-serial-port-already-in-use/}
 
 
-\chapter{ERM}
+\chapter{Entity-Relationship-Model}
 \label{appendix/erm:erm}\label{appendix/erm::doc}
-The softwares database entity-relation-model (ERM) as seen in Figure~\ref{fig:appendix-erm}
+The softwares database entity-relationship-model (ERM) as seen in Figure~\ref{fig:appendix-erm}
 
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{images/erm.png}
