--- a/docs/tud-latex/source.tex
+++ b/docs/tud-latex/source.tex
@@ -119,7 +119,7 @@ Note: Prior sample measurements showed, the value didn't changed after the secon
 Results are shown in table~\ref{table:firmware-verification}.
 
 \begin{tabularx}{\textwidth}{lll}
-\caption{Measurement Results}
+\caption{Measurement Results for Flicker-Frequency Accuracy Verification}
 \label{table:firmware-verification}
 \medskip
 \hline
@@ -467,7 +467,7 @@ Figure~\ref{fig:firmware-verification} graph shows the scattering of the measure
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{images/firmware-verification.png}
-	\caption{Results as graph}
+	\caption{Measurement Results for Flicker-Frequency Accuracy Verification with Frequency Line}
 	\label{fig:firmware-verification}
 \end{figure}
 
